...
    <string name="promo_notifications_step2">Set your own schedule</string>
    <string name="rail_defect">Rail Defect</string>
    <string name="rail_defect_lowercase">rail defect</string>
    <string name="real_time_arrivals_updating_live">Real-time arrivals updating live</string>
    <string name="recenter">Recenter map on my location</string>
    <string name="recenter_map_on_vehicle">Recenter map on %1$s</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_predictions">Refresh predictions</string>
    <string name="reload_data">Reload data</string>
    <string name="remove">Remove</string>
    <string name="remove_favorite">remove favorite</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
...
    <string name="resources_link_mticket">Commuter Rail and Ferry Tickets</string>
    <string name="resources_link_mticket_note">mTicket App</string>
    <string name="resources_link_trip_planner">Trip Planner</string>
    <string name="results_failed_to_load">Results failed to load ☹️</string>
    <string name="route_effect">%1$s %2$s</string>
    <string name="route_mode_label">%1$s %2$s</string>
    <string name="routes">Routes</string>
    <string name="save">Save</string>
    <string name="schedule_change">Schedule Change</string>
    <string name="schedule_change_sentence_case">Schedule change</string>
    <string name="scheduled_to_depart">Scheduled to depart</string>
    <string name="scheduled_to_depart_accessibility_desc">Selected %1$s scheduled to depart %2$s</string>
    <string name="scheduled_to_depart_selected_stop_accessibility_desc">Selected %1$s scheduled to depart %2$s, selected stop</string>
...
    <string name="stop_moved">Stop Moved</string>
    <string name="stop_moved_sentence_case">Stop moved</string>
    <string name="stop_shoveling">Stop Shoveling</string>
    <string name="stop_shoveling_sentence_case">Stop shoveling</string>
    <string name="stop_skipped">Stop Skipped</string>
    <string name="stop_skipped_sentence_case">Stop skipped</string>
    <string name="stops">Stops</string>
    <plurals name="stops_away">
        <item quantity="one">%1$d stop away</item>
        <item quantity="other">%1$d stops away</item>
    </plurals>
    <string name="strike">Strike</string>
    <string name="strike_lowercase">strike</string>
...
